--- a/css/main.css
+++ b/css/main.css
@@ -429,6 +429,7 @@ h1 {
    width: 21vw;
    transition: 0.7s cubic-bezier(0.05, 0.6, 0.4, 0.9);
    opacity: 1;
+   min-width: 283px;
 }
 
 .panel_magic__show-collection {
@@ -2733,6 +2734,9 @@ div.cs-last {
 }
 .slider-switcher-hide {
    display: none;
+}
+.pag-btn-s-view {
+   display: flex;
 }
 /*  */
 
