--- a/css/main.css
+++ b/css/main.css
@@ -733,13 +733,13 @@ h1 {
    height: 16px;
 }
 .review-walue-bar_status-5 {
-   background: #6d7762;
+   background: #6c6050;
    border-radius: 56px;
    width: 100%;
    height: 100%;
 }
 .review-walue-bar_status-4 {
-   background: #6d7762;
+   background: #6c6050;
    border-radius: 56px;
    width: 50%;
    height: 100%;
@@ -1295,6 +1295,11 @@ div.cs-select {
    line-height: 1.24;
    letter-spacing: 0.01em;
    color: #1d1d1d;
+
+   border-radius: 24px;
+}
+.bg-white {
+   background: #fff;
 }
 
 div.cs-select:focus {
@@ -1308,6 +1313,9 @@ div.cs-select:focus {
    border: 1px solid rgba(29, 29, 29, 0.48);
    border-radius: 24px;
    padding: 7px 16px 7px 24px;
+}
+.border-none > .cs-placeholder {
+   border: none;
 }
 
 .cs-select span {
@@ -2690,10 +2698,9 @@ div.cs-last {
    text-transform: uppercase;
    color: #181818;
 }
-.nav-list-list.regular{
+.nav-list-list.regular {
    font-weight: 400;
-
- }
+}
 .nav-list a {
    color: unset;
    text-decoration: none;
