feat:sale font weight rectangle update

--- a/css/main.css
+++ b/css/main.css
@@ -881,6 +881,9 @@ h1 {
    align-items: center;
    justify-content: center;
 }
+.viewed-product_discont-value span {
+   font-weight: 300;
+}
 .product_discont-value {
    width: 48px;
    height: 48px;
