--- a/css/main.css
+++ b/css/main.css
@@ -1509,7 +1509,7 @@ div.cs-last {
    object-fit: cover;
    object-position: center;
    aspect-ratio: 578/560;
-   border-radius: 24px;
+   border-radius: 24px 24px 0 0;
 }
 .catalog-mid_down-block {
    padding: 24px;
