--- a/css/main.css
+++ b/css/main.css
@@ -1771,6 +1771,7 @@ div.cs-last {
    display: flex;
    align-items: center;
    gap: 24px;
+   margin-left: auto;
 }
 .right-p-p_control__to-cart {
    font-family: "Inter", sans-serif;
@@ -1951,9 +1952,11 @@ div.cs-last {
    font-size: 16px;
    line-height: 1.24;
    letter-spacing: 0.01em;
-   text-decoration: line-through;
    text-align: right;
    color: #1d1d1d;
+}
+.product-box__price___price-old span {
+   text-decoration: line-through;
 }
 .product-box__price___price-old.gift {
    text-decoration: unset;
