--- a/css/main.css
+++ b/css/main.css
@@ -256,6 +256,8 @@ h1 {
    width: 100%;
    display: flex;
    align-items: center;
+   height: fit-content;
+   margin-top: 36px;
 }
 .ramillas-footer {
    font-family: "TT Ramillas Trl";
@@ -656,7 +658,7 @@ h1 {
    font-size: 16px;
    line-height: 1.24;
    letter-spacing: 0.01em;
-   color: #6d7762;
+   color: #6c6050;
 
    margin: 4px 0 50px;
 }
@@ -675,7 +677,7 @@ h1 {
    font-size: 16px;
    line-height: 1.24;
    letter-spacing: 0.01em;
-   color: #6d7762;
+   color: #6c6050;
 
    text-decoration: none;
    margin-top: 40px;
@@ -914,23 +916,26 @@ footer {
    border-radius: 24px 24px 0 0;
    overflow: hidden;
    margin-top: 96px;
-   height: 1080px;
+   height: 992px;
 }
 .footer_left-side {
    width: 25%;
    background-image: url(../assets/content/footer-bg.png);
    background-size: cover;
 
-   padding: 56px;
+   padding: 52px 42px;
 
    display: flex;
    flex-direction: column;
    justify-content: space-between;
 }
+.footer_left-side img {
+   width: 264px;
+}
 .footer_rignt-side {
    width: 75%;
    background: #e1e8e0;
-   padding: 56px 75px 56px 150px;
+   padding: 56px 75px 80px 150px;
    display: flex;
    flex-wrap: wrap;
 }
@@ -948,6 +953,7 @@ footer {
    font-size: 12px;
    line-height: 1.33333;
    /* color: rgba(255, 255, 255, 0.48); */
+   max-width: 360px;
 }
 .footer-title {
    font-family: "TT Ramillas Trl", sans-serif;
@@ -966,10 +972,10 @@ footer {
    text-decoration: none;
 }
 .footer-u-list > li {
-   margin-top: 16px;
+   margin-top: 20px;
 }
 .footer_rignt__ul-box {
-   width: 50%;
+   width: 35%;
 }
 .footer-social-webs,
 .footer-payment {
@@ -990,7 +996,7 @@ footer {
    width: 100%;
    flex-wrap: wrap;
    gap: 20px;
-   margin-top: auto;
+   /* margin-top: auto; */
 }
 /* 2-page */
 .h2-no-margin {
@@ -1424,12 +1430,12 @@ div.cs-select:focus {
 }
 div.cs-last {
    margin-left: auto;
-   background: #6d7762;
+   background: #6c6050;
    color: white;
    border-radius: 24px;
 }
 .cs-last li span {
-   background: #6d7762;
+   background: #6c6050;
 }
 .cs-last .cs-options {
    width: 100%;
@@ -1570,7 +1576,7 @@ div.cs-last {
    border-radius: 14px;
    height: 53px;
    border: none;
-   background: #6d7762;
+   background: #6c6050;
    color: #fff;
 }
 .filter-btn-catalog-2 {
@@ -1753,7 +1759,7 @@ div.cs-last {
    font-weight: 400;
    font-size: 16px;
    line-height: 1.24;
-   color: #6d7762;
+   color: #6c6050;
    z-index: 10;
 }
 .right-p-p_show-more-btn p {
@@ -2210,6 +2216,9 @@ div.cs-last {
    font-weight: 400;
    font-size: 16px;
 }
+.price-32-px {
+   font-size: 32px;
+}
 .summ-block_discr {
    font-family: "Inter", sans-serif;
    font-weight: 400;
@@ -2355,7 +2364,7 @@ div.cs-last {
    padding: 14px 16px;
    width: 54px;
    height: 48px;
-   background: #6d7762;
+   background: #6c6050;
    position: absolute;
    top: 0;
    left: 0;
@@ -2441,7 +2450,7 @@ div.cs-last {
    padding: 16px 32px 18px 32px;
 }
 .cabinet-change-pass-btn {
-   background: #6d7762;
+   background: #6c6050;
    border-radius: 24px;
    padding: 16px 32px 18px 32px;
 }
@@ -2471,7 +2480,9 @@ div.cs-last {
    letter-spacing: 0.01em;
    color: #1d1d1d;
 }
-
+.cashback-listener_values > p:first-child {
+   opacity: 0.5;
+}
 .cashback-listener {
    margin: 48px 0 24px;
 }
@@ -2483,7 +2494,7 @@ div.cs-last {
    width: 50%;
    height: 16px;
    border-radius: 56px;
-   background: #6d7762;
+   background: #6c6050;
 }
 .bonus-card {
    width: 100%;
@@ -2576,7 +2587,7 @@ div.cs-last {
    padding: 14px 16px;
 }
 .orders-tab.active {
-   background: #6d7762;
+   background: #6c6050;
    color: #fff;
 }
 .orders-period {
