--- a/css/main.css
+++ b/css/main.css
@@ -276,6 +276,13 @@ h1 {
    flex-wrap: wrap;
    gap: 24px;
 }
+.svg-icon path {
+   transition: fill 0.3s ease;
+}
+.svg-icon:hover path:nth-child(1) {
+   /* fill: red;  */
+   stroke: #000;
+}
 .red-circle {
    background: rgb(255, 81, 81);
    aspect-ratio: 1;
