--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,14 @@ body {
    justify-content: space-between;
    align-items: center;
 }
+.nav-absolut {
+   position: absolute;
+
+   width: calc(100% - 112px);
+   top: 32px;
+   left: 50%;
+   transform: translateX(-50%);
+}
 .home-header {
    padding: 32px 56px 48px;
    height: 960px;
@@ -39,11 +47,20 @@ body {
 
    display: flex;
    flex-direction: column;
+
+   width: 100vw;
+   transition: 1s ease;
+}
+.home-header-owerflow {
+}
+.header-max-width-container {
+   display: flex;
+   width: max-content;
 }
 .home-collection {
    padding: 32px 56px 48px;
    height: 772px;
-   background-image: url(../assets/content/collection-header.png);
+   background-image: url(../assets/content/collection-header-update.jpeg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
@@ -223,6 +240,10 @@ h1 {
    display: flex;
    gap: 22px;
 }
+.flex-in-catalog-block > ing {
+   width: 48px;
+   height: 48px;
+}
 
 .name-of-thing-home {
    font-family: "TT Ramillas Trl", sans-serif;
@@ -252,6 +273,8 @@ h1 {
    width: 100%;
    display: flex;
    align-items: center;
+   height: fit-content;
+   margin-top: 36px;
 }
 .ramillas-footer {
    font-family: "TT Ramillas Trl";
@@ -269,6 +292,13 @@ h1 {
    display: flex;
    flex-wrap: wrap;
    gap: 24px;
+}
+.svg-icon path {
+   transition: fill 0.3s ease;
+}
+.svg-icon:hover path:nth-child(1) {
+   /* fill: red;  */
+   stroke: #000;
 }
 .red-circle {
    background: rgb(255, 81, 81);
@@ -652,7 +682,7 @@ h1 {
    font-size: 16px;
    line-height: 1.24;
    letter-spacing: 0.01em;
-   color: #6d7762;
+   color: #6c6050;
 
    margin: 4px 0 50px;
 }
@@ -671,7 +701,7 @@ h1 {
    font-size: 16px;
    line-height: 1.24;
    letter-spacing: 0.01em;
-   color: #6d7762;
+   color: #6c6050;
 
    text-decoration: none;
    margin-top: 40px;
@@ -910,23 +940,26 @@ footer {
    border-radius: 24px 24px 0 0;
    overflow: hidden;
    margin-top: 96px;
-   height: 1080px;
+   height: 992px;
 }
 .footer_left-side {
    width: 25%;
    background-image: url(../assets/content/footer-bg.png);
    background-size: cover;
 
-   padding: 56px;
+   padding: 52px 42px;
 
    display: flex;
    flex-direction: column;
    justify-content: space-between;
 }
+.footer_left-side img {
+   width: 264px;
+}
 .footer_rignt-side {
    width: 75%;
    background: #e1e8e0;
-   padding: 56px 75px 56px 150px;
+   padding: 56px 75px 80px 150px;
    display: flex;
    flex-wrap: wrap;
 }
@@ -944,6 +977,7 @@ footer {
    font-size: 12px;
    line-height: 1.33333;
    /* color: rgba(255, 255, 255, 0.48); */
+   max-width: 360px;
 }
 .footer-title {
    font-family: "TT Ramillas Trl", sans-serif;
@@ -962,10 +996,10 @@ footer {
    text-decoration: none;
 }
 .footer-u-list > li {
-   margin-top: 16px;
+   margin-top: 20px;
 }
 .footer_rignt__ul-box {
-   width: 50%;
+   width: 35%;
 }
 .footer-social-webs,
 .footer-payment {
@@ -986,7 +1020,7 @@ footer {
    width: 100%;
    flex-wrap: wrap;
    gap: 20px;
-   margin-top: auto;
+   /* margin-top: auto; */
 }
 /* 2-page */
 .h2-no-margin {
@@ -1420,12 +1454,12 @@ div.cs-select:focus {
 }
 div.cs-last {
    margin-left: auto;
-   background: #6d7762;
+   background: #6c6050;
    color: white;
    border-radius: 24px;
 }
 .cs-last li span {
-   background: #6d7762;
+   background: #6c6050;
 }
 .cs-last .cs-options {
    width: 100%;
@@ -1505,7 +1539,7 @@ div.cs-last {
    object-fit: cover;
    object-position: center;
    aspect-ratio: 578/560;
-   border-radius: 24px;
+   border-radius: 24px 24px 0 0;
 }
 .catalog-mid_down-block {
    padding: 24px;
@@ -1519,8 +1553,8 @@ div.cs-last {
 
 .catalog-mid_like {
    position: absolute;
-   top: 24px;
-   right: 24px;
+   top: 16px;
+   right: 16px;
 }
 .crop-img {
    width: 85%;
@@ -1538,7 +1572,7 @@ div.cs-last {
    height: 160px;
    position: absolute;
    right: 0;
-   top: -30px;
+   top: -14px;
    margin-left: auto;
    background-image: url(../assets/content/exclusive.png);
    background-size: cover;
@@ -1566,7 +1600,7 @@ div.cs-last {
    border-radius: 14px;
    height: 53px;
    border: none;
-   background: #6d7762;
+   background: #6c6050;
    color: #fff;
 }
 .filter-btn-catalog-2 {
@@ -1681,7 +1715,7 @@ div.cs-last {
    font-size: 24px;
    line-height: 1.24;
    letter-spacing: 0.01em;
-   color: #6d7762;
+   color: #6c6050;
 
    margin-bottom: 24px;
 }
@@ -1749,7 +1783,7 @@ div.cs-last {
    font-weight: 400;
    font-size: 16px;
    line-height: 1.24;
-   color: #6d7762;
+   color: #6c6050;
    z-index: 10;
 }
 .right-p-p_show-more-btn p {
@@ -1767,6 +1801,7 @@ div.cs-last {
    display: flex;
    align-items: center;
    gap: 24px;
+   margin-left: auto;
 }
 .right-p-p_control__to-cart {
    font-family: "Inter", sans-serif;
@@ -1787,7 +1822,7 @@ div.cs-last {
    height: 64px;
    border-radius: 50%;
    display: flex;
-   background: #6d7762;
+   background: #6c6050;
 }
 .right-p-p_control__text {
    font-family: "Inter", sans-serif;
@@ -1947,9 +1982,11 @@ div.cs-last {
    font-size: 16px;
    line-height: 1.24;
    letter-spacing: 0.01em;
-   text-decoration: line-through;
    text-align: right;
    color: #1d1d1d;
+}
+.product-box__price___price-old span {
+   text-decoration: line-through;
 }
 .product-box__price___price-old.gift {
    text-decoration: unset;
@@ -2203,6 +2240,9 @@ div.cs-last {
    font-weight: 400;
    font-size: 16px;
 }
+.price-32-px {
+   font-size: 32px;
+}
 .summ-block_discr {
    font-family: "Inter", sans-serif;
    font-weight: 400;
@@ -2348,7 +2388,7 @@ div.cs-last {
    padding: 14px 16px;
    width: 54px;
    height: 48px;
-   background: #6d7762;
+   background: #6c6050;
    position: absolute;
    top: 0;
    left: 0;
@@ -2434,7 +2474,7 @@ div.cs-last {
    padding: 16px 32px 18px 32px;
 }
 .cabinet-change-pass-btn {
-   background: #6d7762;
+   background: #6c6050;
    border-radius: 24px;
    padding: 16px 32px 18px 32px;
 }
@@ -2464,7 +2504,9 @@ div.cs-last {
    letter-spacing: 0.01em;
    color: #1d1d1d;
 }
-
+.cashback-listener_values > p:first-child {
+   opacity: 0.5;
+}
 .cashback-listener {
    margin: 48px 0 24px;
 }
@@ -2476,7 +2518,7 @@ div.cs-last {
    width: 50%;
    height: 16px;
    border-radius: 56px;
-   background: #6d7762;
+   background: #6c6050;
 }
 .bonus-card {
    width: 100%;
@@ -2569,7 +2611,7 @@ div.cs-last {
    padding: 14px 16px;
 }
 .orders-tab.active {
-   background: #6d7762;
+   background: #6c6050;
    color: #fff;
 }
 .orders-period {
