save deploy to main (#51)
* feat: img 48 set size

* feat: link to img update

* feat: like btn catalog update width and position

* fix: border update

* feat: exctusive shtapm update position and media

* feat: collection bg update, product page colors update

* feat: text trought price update

* feat: toggle cart yeloow update

* feat: footer update

* feat: social webs hower to svg update in burger and footer

* feat: get slider for home first step

* feat: slider second step, prepair 2 column

* feat: background for slider complete

* feat: slider complete

* feat: slider will be finished

* feat: like / unlike at home add hover + active / unactiva state

* feat: still git

--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,12 @@ body {
 
    width: 100vw;
    transition: 1s ease;
+   transform: translateX(-0%);
 }
 .home-header-owerflow {
+   width: 100%;
+   overflow-x: hidden;
+
 }
 .header-max-width-container {
    display: flex;
@@ -143,8 +147,14 @@ h1 {
 }
 .header-slider-buttons_prev {
    transform: rotate(180deg);
+   cursor: pointer;
 }
 .header-slider-buttons_next {
+   cursor: pointer;
+}
+.header-slider-buttons_prev.unactive,
+.header-slider-buttons_next.unactive {
+   cursor: default;
 }
 
 .line {
@@ -293,12 +303,26 @@ h1 {
    flex-wrap: wrap;
    gap: 24px;
 }
-.svg-icon path {
-   transition: fill 0.3s ease;
+.svg-icon,
+.svg-like-blk {
+   transition: all 0.6s ease;
 }
 .svg-icon:hover path:nth-child(1) {
-   /* fill: red;  */
    stroke: #000;
+   
+}
+.svg-like-blk:hover circle {
+   stroke: #000;
+}
+.filled-heart path {
+   fill: black;
+}
+.svg-like-white:hover circle {
+   stroke: #ffffff;
+}
+.filled-heart-w path {
+   fill: rgb(255, 255, 255);
+
 }
 .red-circle {
    background: rgb(255, 81, 81);
