--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,6 @@ body {
 .home-header-owerflow {
    width: 100%;
    overflow-x: hidden;
-
 }
 .header-max-width-container {
    display: flex;
@@ -309,7 +308,6 @@ h1 {
 }
 .svg-icon:hover path:nth-child(1) {
    stroke: #000;
-   
 }
 .svg-like-blk:hover circle {
    stroke: #000;
@@ -322,7 +320,6 @@ h1 {
 }
 .filled-heart-w path {
    fill: rgb(255, 255, 255);
-
 }
 .red-circle {
    background: rgb(255, 81, 81);
@@ -533,6 +530,7 @@ h1 {
 
 .product-card_like-btn {
    margin-left: auto;
+   cursor: pointer;
 }
 
 .product-card_discription {
@@ -682,7 +680,7 @@ h1 {
    background-color: white;
    padding: 45px 25px 36px 30px;
    border-radius: 24px;
-   width: 23.5vw;
+   width: 434px;
 }
 .review_top-block {
    display: flex;
@@ -695,6 +693,7 @@ h1 {
    line-height: 1.3;
    letter-spacing: 0.01em;
    color: #1d1d1d;
+   flex-shrink: 0;
 }
 .review_stars {
    display: flex;
@@ -1284,6 +1283,7 @@ footer {
 
 .accordion__header_title {
    width: 80%;
+   line-height: normal;
 }
 .accordion__header_img {
    transition: 0.2s ease;
