--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,6 @@ body {
 .home-header-owerflow {
    width: 100%;
    overflow-x: hidden;
-
 }
 .header-max-width-container {
    display: flex;
@@ -324,6 +323,18 @@ h1 {
    fill: rgb(255, 255, 255);
 
 }
+.svg-like-blk:hover circle {
+   stroke: #000;
+}
+.filled-heart path {
+   fill: black;
+}
+.svg-like-white:hover circle {
+   stroke: #ffffff;
+}
+.filled-heart-w path {
+   fill: rgb(255, 255, 255);
+}
 .red-circle {
    background: rgb(255, 81, 81);
    aspect-ratio: 1;
@@ -533,6 +544,7 @@ h1 {
 
 .product-card_like-btn {
    margin-left: auto;
+   cursor: pointer;
 }
 
 .product-card_discription {
@@ -682,7 +694,7 @@ h1 {
    background-color: white;
    padding: 45px 25px 36px 30px;
    border-radius: 24px;
-   width: 23.5vw;
+   width: 434px;
 }
 .review_top-block {
    display: flex;
@@ -695,6 +707,7 @@ h1 {
    line-height: 1.3;
    letter-spacing: 0.01em;
    color: #1d1d1d;
+   flex-shrink: 0;
 }
 .review_stars {
    display: flex;
@@ -737,6 +750,49 @@ h1 {
    color: #fff;
    text-transform: uppercase;
 }
+
+.custom-checkbox {
+   position: relative;
+   width: 14px;
+   height: 14px;
+   border: 1px solid #1d1d1d;
+   border-radius: 4px;
+   cursor: pointer;
+   display: inline-block;
+   vertical-align: middle;
+}
+
+/* .custom-checkbox:hover {
+   background-color: #f8f3ed;
+} */
+
+.check-basket input[type="checkbox"] {
+   display: none;
+}
+
+.custom-checkbox::after {
+   content: "";
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   width: 10px;
+   height: 10px;
+   background-color: #ff5151;
+   transform: translate(-50%, -50%) scale(0);
+   transition: transform 0.2s ease-in-out;
+   border-radius: 2px;
+}
+
+.check-basket input[type="checkbox"]:checked + .custom-checkbox::after {
+   transform: translate(-50%, -50%) scale(1);
+}
+
+.check-basket {
+   position: absolute;
+   top: 20px;
+   right: 0px;
+}
+
 .menu-text-black {
    font-size: 19px;
    font-family: Inter;
@@ -1284,6 +1340,7 @@ footer {
 
 .accordion__header_title {
    width: 80%;
+   line-height: normal;
 }
 .accordion__header_img {
    transition: 0.2s ease;
@@ -1995,6 +2052,7 @@ div.cs-last {
    text-transform: uppercase;
    text-align: right;
    color: #1d1d1d;
+   flex-shrink: 0;
 }
 .product-box__price___price span {
    font-weight: 400;
@@ -2098,7 +2156,7 @@ div.cs-last {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
-   height: 1.5px;
+   height: 0.94px;
    width: 20px;
    background: #000;
 }
@@ -2111,7 +2169,7 @@ div.cs-last {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
-   height: 1.5px;
+   height: 0.94px;
    width: 20px;
    background: #fff;
 }
@@ -2121,7 +2179,7 @@ div.cs-last {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) rotate(90deg);
-   height: 1.5px;
+   height: 0.94px;
    width: 20px;
    background: #fff;
 }
@@ -2131,6 +2189,7 @@ div.cs-last {
    border-radius: 16px;
    align-items: center;
    width: 100%;
+   position: relative;
 }
 .basket_product.in-cart {
    background: #fff888;
@@ -2144,6 +2203,12 @@ div.cs-last {
    width: calc(66% + 64px);
 }
 
+.basket-sale {
+   margin-left: 0;
+}
+.t-a-start {
+   text-align: start;
+}
 .basket-product__mid.target {
    width: calc(66% - 16px);
 }
@@ -2185,11 +2250,14 @@ div.cs-last {
 }
 .basket-product-price-box {
    margin-left: auto;
+   display: flex;
+   flex-direction: column;
 }
 .basket-product-box {
    display: flex;
    align-items: center;
    gap: 24px;
+   position: relative;
 }
 .basket-checkbox {
    width: 24px;
@@ -2347,7 +2415,7 @@ div.cs-last {
    color: #1d1d1d70;
 }
 .booking-form_input-comment {
-   border: 4px solid #f8f3ed;
+   border: 2px solid #f8f3ed;
    border-radius: 16px;
    padding: 22px 24px;
    width: 100%;
@@ -2355,11 +2423,11 @@ div.cs-last {
    position: relative;
 }
 .booking-form_input-comment::placeholder {
-   top: 22px;
+   top: 20px;
    position: absolute;
 }
 .booking-form_input.no-need {
-   border: 4px solid #f8f3ed;
+   border: 2px solid #f8f3ed;
    background: #fff;
 }
 .b-f-i-1 {
