--- a/css/media.css
+++ b/css/media.css
@@ -318,6 +318,9 @@
       margin-top: 20px;
       gap: 10px;
    }
+   .cabinet-form {
+      gap: 10px;
+   }
    .p-p-section {
       flex-direction: column;
    }
@@ -348,10 +351,16 @@
    .basket-box-price span {
       font-size: 16px;
    }
+   .stat-value {
+      font-size: 24px;
+   }
 }
 @media (max-width: 1000px) {
    .footer_discription {
       order: 1;
+   }
+   .approve-text {
+      font-size: 12px;
    }
    .video-preview {
       display: none;
@@ -531,6 +540,9 @@
    .menu-text {
       display: none;
    }
+   .stat {
+      font-size: 18px;
+   }
 }
 @media (max-width: 900px) {
    .order-list {
@@ -542,6 +554,7 @@
       position: relative;
       gap: 10px;
    }
+
    .order-item > li {
       width: 100%;
       max-width: unset;
