--- a/css/media.css
+++ b/css/media.css
@@ -360,6 +360,25 @@
    .stat-value {
       font-size: 24px;
    }
+
+   .basket_product:hover {
+      background: #fff888;
+      margin-left: 0;
+      width: 100%;
+   }
+   .basket_product:hover .check-basket {
+      opacity: 1;
+   }
+   .basket_product:hover .basket-product__mid {
+      width: calc(((100% + 20px) * 0.66));
+   }
+   .basket_product:hover .basket-count-buttons {
+      opacity: 1;
+      z-index: 1;
+   }
+   .basket_product:hover .basket-sale {
+      display: none;
+   }
 }
 @media (max-width: 1000px) {
    .footer_discription {
@@ -811,7 +830,6 @@
       font-size: 30px;
    }
    .basket-sale {
-      margin-left: -7.5px;
    }
 }
 
