--- a/css/media.css
+++ b/css/media.css
@@ -227,7 +227,7 @@
    }
    .basket-product__end {
       flex-direction: row-reverse;
-      justify-content: space-between;
+      justify-content: start;
       margin-top: 17px;
    }
    .basket-product-price-box {
@@ -362,7 +362,7 @@
    }
 
    .basket_product:hover {
-      background: #fff888;
+      background: #fff;
       margin-left: 0;
       width: 100%;
    }
@@ -370,14 +370,19 @@
       opacity: 1;
    }
    .basket_product:hover .basket-product__mid {
-      width: calc(((100% + 20px) * 0.66));
+      /* width: calc(((100% + 20px) * 0.66)); */
    }
-   .basket_product:hover .basket-count-buttons {
+   .basket_product .basket-count-buttons {
       opacity: 1;
       z-index: 1;
+      right: 0;
    }
    .basket_product:hover .basket-sale {
-      display: none;
+      opacity: 1;
+   }
+   .basket-sale{
+      left: 10px;
+      bottom: 0;
    }
 }
 @media (max-width: 1000px) {
