--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,12 @@
+@media (min-width: 1600px) and (max-width: 1900px) {
+   .basket_product .basket-product__mid {
+      width: calc(((100% + 20px) * 0.56));
+   }
+   .basket_product:hover .basket-product__mid {
+      width: calc(((100% + 20px) * 0.55));
+   }
+}
+
 @media (max-width: 1700px) {
    .catalog-home-block-1 {
       width: 100%;
@@ -94,6 +103,12 @@
    .exclusive-point::after {
       width: 130px;
       height: 130px;
+   }
+   .basket_product .basket-product__mid {
+      width: calc(((100% + 20px) * 0.56));
+   }
+   .basket_product:hover .basket-product__mid {
+      width: calc(((100% + 20px) * 0.55));
    }
 }
 
@@ -217,7 +232,7 @@
       margin-right: 13px;
       border: 1px solid #bebebe;
    }
-   .basket-product__mid {
+   .basket_product .basket-product__mid {
       width: calc(100% - 108px);
       flex-grow: 1;
       flex-wrap: wrap;
@@ -229,6 +244,10 @@
       flex-direction: row-reverse;
       justify-content: start;
       margin-top: 17px;
+      width: 100%;
+   }
+   .basket_product__text {
+      max-width: unset;
    }
    .basket-product-price-box {
       margin: 0;
@@ -380,7 +399,7 @@
    .basket_product:hover .basket-sale {
       opacity: 1;
    }
-   .basket-sale{
+   .basket-sale {
       left: 10px;
       bottom: 0;
    }
