feat: product like icon create svf html element and get hover effect

--- a/css/main.css
+++ b/css/main.css
@@ -2268,6 +2268,9 @@ div.cs-last {
    transform: translateX(100%);
    right: -16px;
 }
+.catalog-viewed .basket-sale {
+   transform: translateX(0);
+}
 .t-a-start {
    text-align: start;
 }
