feat: red circle update - add hover to white bg

--- a/css/main.css
+++ b/css/main.css
@@ -393,6 +393,12 @@ h1 {
    line-height: 1.2;
    letter-spacing: 0.02em;
    color: #fff;
+
+   cursor: pointer;
+}
+.red-circle:hover {
+   color: #000;
+   background: #fff;
 }
 
 .panel-container {
