--- a/css/main.css
+++ b/css/main.css
@@ -573,12 +573,25 @@ h1 {
    border-radius: 24px;
    overflow: hidden;
    width: fit-content;
+   position: relative;
 }
 .product-card:hover > .product-card_discription {
    background: #fff888;
 }
+.product-card:hover .red-cart-button-big {
+   display: block;
+}
 .viewed-product:hover {
    background: #fff888;
+}
+.viewed-product:hover .red-cart-button {
+   display: block;
+}
+.product-card:hover .product-card_price {
+   display: none;
+}
+.viewed-product:hover .viewed-product_price-sub {
+   display: none;
 }
 .product-card-image {
    display: flex;
@@ -1160,6 +1173,16 @@ footer {
    flex-wrap: wrap;
    gap: 20px;
    /* margin-top: auto; */
+}
+.red-cart-button {
+   position: absolute;
+   right: 15px;
+   bottom: 24px;
+}
+.red-cart-button-big {
+   position: absolute;
+   right: 18px;
+   bottom: 18px;
 }
 /* 2-page */
 .h2-no-margin {
