--- a/css/main.css
+++ b/css/main.css
@@ -762,7 +762,8 @@ h1 {
    display: flex;
    justify-content: space-between;
 }
-.review_name {
+.review_name,
+.review_count {
    font-family: "TT Ramillas Trl", sans-serif;
    font-weight: 400;
    font-size: 24px;
