--- a/css/main.css
+++ b/css/main.css
@@ -1969,6 +1969,7 @@ div.cs-last {
    align-items: center;
    gap: 24px;
    margin-left: auto;
+   cursor: pointer;
 }
 .right-p-p_control__to-cart {
    font-family: "Inter", sans-serif;
@@ -1982,7 +1983,22 @@ div.cs-last {
    padding: 16px 32px 18px 32px;
    width: 183px;
    height: 64px;
+   background: #6c6050;
+}
+.right-p-p_control__to-cart:hover {
    background: #ff5151;
+}
+.like-icon-product-w-r {
+   margin: auto;
+}
+.right-p-p_control__like:hover {
+   background: #fff888;
+}
+.right-p-p_control__like:hover .like-icon-product-w-r path {
+   stroke: #000;
+}
+.right-p-p-tg-container:hover .product-ask-tg-btn path {
+   stroke-opacity: 1;
 }
 .right-p-p_control__like {
    width: 64px;
