feat: catalog all page hover effect complete > full > then > edit list

--- a/css/media.css
+++ b/css/media.css
@@ -1148,6 +1148,9 @@
    .type-of-thing-home {
       font-size: 14px;
    }
+   .line-between-arrows {
+      display: block;
+   }
 }
 
 @media (max-width: 400px) {
