--- a/css/main.css
+++ b/css/main.css
@@ -1630,6 +1630,7 @@ div.cs-last {
    background: #6c6050;
    color: white;
    border-radius: 24px;
+   order: 2;
 }
 .cs-last li span {
    background: #6c6050;
@@ -1650,6 +1651,24 @@ div.cs-last {
 }
 .small-div {
    width: calc((100vw - 112px) / 3 - 16px);
+}
+.clear-filter-btn {
+   order: 1;
+   border: 1px solid rgba(29, 29, 29, 0.48);
+   border-radius: 24px;
+   padding: 7px 16px 7px 24px;
+
+   font-family: "Inter", sans-serif;
+   font-weight: 400;
+   font-size: 20px;
+   line-height: 1.24;
+   letter-spacing: 0.01em;
+   color: #ff5151;
+
+   display: flex;
+   align-items: center;
+   gap: 10px;
+   cursor: pointer;
 }
 
 .div1 {
@@ -1706,6 +1725,10 @@ div.cs-last {
 
    display: flex;
    flex-direction: column;
+   overflow: hidden;
+}
+.catalog-mid-block:hover .catalog-mid_down-block {
+   background: #fff888;
 }
 .catalog-mid_img {
    width: 100%;
