--- a/css/main.css
+++ b/css/main.css
@@ -1632,8 +1632,16 @@ div.cs-last {
    border-radius: 24px;
    order: 2;
 }
+.content_links:hover {
+   scale: 1.1;
+}
+.content_links {
+   cursor: pointer;
+   transition: 0.3s ease;
+}
 .cs-last li span {
-   background: #6c6050;
+   background: #fff;
+   color: #000;
 }
 .cs-last .cs-options {
    width: 100%;
@@ -3100,4 +3108,7 @@ div.cs-last {
 }
 .shrink {
    flex-shrink: 0;
+}
+.mt95 {
+   margin-top: 95px;
 }
