feat: font update

--- a/css/media.css
+++ b/css/media.css
@@ -869,6 +869,9 @@
    .cabinet-tabs {
       font-size: 16px;
    }
+   .subtitle-collection {
+      font-size: 14px;
+   }
    .h2-section {
       font-size: 30px;
    }
