--- a/css/main.css
+++ b/css/main.css
@@ -124,7 +124,8 @@ h1 {
    margin-top: auto;
 }
 
-.subtitle-home {
+.subtitle-home,
+.subtitle-collection {
    font-family: "Inter", sans-serif;
    font-weight: 400;
    font-size: 24px;
