feat: cabinet update

--- a/css/main.css
+++ b/css/main.css
@@ -2818,7 +2818,7 @@ div.cs-last {
    font-weight: 700;
    font-size: 48px;
    line-height: 1.1;
-   color: #fff;
+   color: #fff888;
 }
 .bonus-card_value span {
    font-weight: 400;
