--- a/css/media.css
+++ b/css/media.css
@@ -858,6 +858,12 @@
    .accordion__content {
       width: 100%;
    }
+   .bonus-info-subt {
+      font-size: 16px;
+   }
+   .bonus-info-disc {
+      font-size: 14px;
+   }
 }
 
 @media (max-width: 600px) {
