feat: stars fix on review

--- a/css/main.css
+++ b/css/main.css
@@ -782,6 +782,9 @@ h1 {
 .review_stars {
    display: flex;
    gap: 9px;
+   width: -webkit-fill-available;
+   align-items: center;
+   justify-content: end;
 }
 .review_date {
    font-family: "Inter", sans-serif;
